resolve problems related to z-index, navbar and filters

--- a/src/components/Navbar/styles.scss
+++ b/src/components/Navbar/styles.scss
@@ -8,6 +8,8 @@
   align-items: center;
   padding: 4vh 10vw ;
   background-color: $se-light-background-grey ;
+  position: relative;
+  z-index: 3;
 
   .logo {
     pointer-events: all;
