--- a/src/pages/HiringPortal/styles.scss
+++ b/src/pages/HiringPortal/styles.scss
@@ -14,6 +14,8 @@
 
 .hiring-portal-wrapper {
   background: $se_light_grey;
+  position: relative;
+  z-index: 1;
 }
 
 
